syntax = "proto3";

option csharp_namespace = "GrpcPoc.Service.Protos";

package file;

service FileService {
  rpc UploadFile(stream FileChunk) returns (UploadStatus);
  rpc DownloadFile(FileRequest) returns (stream FileChunk);
}

message FileChunk {
  bytes content = 1;
  int64 chunk_size = 2;
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}

message FileRequest {
  string file_name = 1;
}